--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -7,8 +7,24 @@ $color-fondo: #ffffff;
 $color-header: linear-gradient(to bottom, #82ccd5, #ffffff);
 $color-footer: linear-gradient(to top, #82ccd5, #ffffff);
 $color-borde: #000000;
+$color-principal-regis: #b2c8f9;
+$color-secundario-regis: #264143;
+$color-hover-regis: #6aefff;
+$color-producto-borde: #ddd;
+$color-producto-bg: #fff;
+$color-boton-carrito: #28a745;
+$color-boton-carrito-hover: #218838;
+$box-shadow-regis: 3px 4px 0px 1px #1c346a;
+$box-shadow-producto: 0px 1px 20px -1px gray;
+
 $radio-borde: 5px;
+$radio-borde-regis: 20px;
+$radio-boton-regis: 10px;
+$radio-borde-producto: 8px;
+
 $transicion-efecto: 0.4s;
+
+$color-secundario-regis: #1c346a;
 
 /* FUENTES */
 @font-face {
@@ -42,8 +58,11 @@ $transicion-efecto: 0.4s;
   }
 }
 
-/* ESTILOS BASE */
+@mixin box-shadow($x: 3px, $y: 4px, $blur: 0px, $spread: 1px, $color: #1c346a) {
+  box-shadow: $x $y $blur $spread $color;
+}
 
+/* ESTILOS BASE */
 /* FONDO */
 header {
     background: $color-header;
@@ -65,174 +84,90 @@ footer {
     background: $color-footer;
 }
 
-/* ENCABEZADO */
-.encabezado {
-    position: absolute;
-    display: flex;
-    height: 69px;
-    flex-direction: row;
+/* CONTENEDORES PRODUCTOS */
+.main-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 40px;
 }
 
-.encabezado h1 {
-    font-size: 26px;
-    width: 107px;
-    height: 60px;
-    margin-top: 3px;
-    margin-left: -29px;
-    font-family: $fuente-secundaria;
-    font-weight: 500;
-    font-style: normal;
+.container {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
 }
 
-.encabezado img {
-    height: 70px;
-    padding: 6px;
+/* CARDS DE PRODUCTO */
+.product-card {
+  background-color: $color-producto-bg;
+  border: 1px solid $color-producto-borde;
+  @include borde-redondeado($radio-borde-producto);
+  padding: 16px;
+  width: 230px;
+  text-align: center;
+  margin: 10px;
+  @include box-shadow(0px, 1px, 20px, -1px, gray);
+  margin-top: 40px;
+  margin-bottom: 50px;
+  @include escala-hover(1.1, 0.3s);
+}
+
+.product-image {
+  width: 100%;
+  height: 195px;
+  border-bottom: 1px solid $color-producto-borde;
+  margin-bottom: 15px;
+}
+
+.product-name {
+  font-size: 1.5em;
+  margin: 0 0 10px 0;
+}
+
+.product-price {
+  font-size: 1.2em;
+  color: #333;
+  margin: 0 0 15px 0;
+  font-family: $fuente-secundaria;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.add-to-cart-btn {
+  background-color: $color-boton-carrito;
+  color: #fff;
+  border: none;
+  @include borde-redondeado(5px);
+  padding: 10px 15px;
+  cursor: pointer;
+  font-size: 1em;
+}
+
+.add-to-cart-btn:hover {
+  background-color: $color-boton-carrito-hover;
 }
 
 /* CARRITO */
-.carrito {
-    display: flex;
-    flex-direction: row;
-    justify-content: end;
-    height: 69px;
+.cart {
+  background-color: $color-producto-bg;
+  border: 1px solid $color-producto-borde;
+  @include borde-redondeado(8px);
+  padding: 16px;
+  width: 300px;
+  text-align: center;
 }
 
-.carrito img {
-    height: 65px;
-    padding: 12px 20px 12px 12px;
-    @include escala-hover(1.1, 0.4s);
+.cart h2 {
+  margin-top: 0;
 }
 
-.carrito .inicio-sesion-logo {
-    height: 68px;
-    padding: 12px 5px 12px 12px;
+#cartItems {
+  list-style-type: none;
+  padding: 0;
 }
 
-/* ICONO DE WSP */
-.whatsapp-icon {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    z-index: 1000;
-}
-
-.whatsapp-icon img {
-    width: 60px;
-    height: 60px;
-    border-radius: 35%;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    @include escala-hover(1.1, 0.3s);
-}
-
-/* FOOTER */
-.pie-pagina-2 {
-    display: flex;
-    flex-direction: column;
-    text-align: end;
-    margin-right: 50px;
-    width: 100%;
-    align-items: flex-end;
-}
-
-.pie-pagina-2 a {
-    padding: 8px;
-    margin-right: 11%;
-}
-
-.pie-pagina-2 img {
-    width: 40px;
-    height: 40px;
-    @include escala-hover(1.1, 0.4s);
-}
-
-.pie-pagina-T {
-    padding: 10px 0px 0px 0px;
-    font-family: $fuente-principal;
-    font-weight: 500;
-    margin-right: 118px;
-    font-size: 25px;
-}
-
-.byc {
-    display: inline-block;
-    text-align: center;
-    text-decoration: none;
-    color: #000;
-    padding: 10px 0;
-    font-family: $fuente-principal;
-    font-weight: 500;
-    width: 100%;
-    font-size: 15px;
-    margin: 4px;
-    @include escala-hover(1.1, 0.4s);
-}
-
-.pie-pagina-1 {
-    display: inline-block;
-    position: absolute;
-}
-
-.pie-pagina-1 h2 {
-    padding: 10px 0px 0px 0px;
-    font-family: $fuente-principal;
-    font-weight: 500;
-    margin-left: 95px;
-    font-size: 25px;
-}
-
-.pie-pagina-nav {
-    margin-left: 48px;
-}
-
-.pie-pagina-nav li {
-    margin: 7px;
-    list-style-type: none;
-    font-family: $fuente-principal;
-}
-
-.pie-pagina-nav a {
-    color: black;
-    text-decoration: none;
-    font-size: 13px;
-}
-
-.pie-pagina-nav li:hover {
-    @include escala-hover(1.1, 0.4s);
-}
-
-/* MENU DE NAVEGACION BOOTSTRAP */
-.navbar-brand {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-  
-.navbar-brand img {
-    max-height: 40px;
-    margin-right: -10px;
-    margin-left: -30px;
-}
-
-.navbar-brand h1 {
-    font-size: 40px;
-}
-
-.bg-light {
-    background: $color-header;
-    outline: 2px solid $color-borde;
-    @include borde-redondeado(5px);
-}
-
-.navbar-light .navbar-nav .nav-link {
-    color: black;
-    font-size: 19px;
-}
-
-.navbar-light .navbar-nav .nav-link:hover {
-    text-decoration: underline;
-    @include escala-hover(1.1, 0.4s);
-}
-
-.navbar-light .navbar-nav .nav-link:focus {
-    color: black;
+#cartItems li {
+  margin: 5px 0;
 }
