--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,185 @@ footer {
   margin: 5px 0;
 }
 
+/*-------*/
+/*ENCABEZADO*/
+/*-------*/
+.encabezado {
+  position: absolute;
+  display: flex;
+  height: 69px;
+  flex-direction: row;
+}
+
+.encabezado h1 {
+  font-size: 26px;
+  width: 107px;
+  height: 60px;
+  margin-top: 3px;
+  margin-left: -29px;
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.encabezado img {
+  height: 70px;
+  padding: 6px;
+}
+
+/*-------*/
+/*CARRITO*/
+/*-------*/
+.carrito {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  height: 69px;
+}
+
+.carrito img {
+  height: 65px;
+  padding: 12px 20px 12px 12px;
+}
+
+.carrito img:hover {
+  transform: scale(1.1);
+  transition: transform 0.4s;
+}
+
+.carrito .inicio-sesion-logo {
+  height: 68px;
+  padding: 12px 5px 12px 12px;
+}
+
+/*-------*/
+/*MENU DE NAVEGACION BOOTSTRAP*/
+/*-------*/
+.navbar-brand {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.navbar-brand img {
+  max-height: 40px; /* Ajusta el tamaño de la imagen según sea necesario */
+  margin-right: -10px;
+  margin-left: -30px;
+}
+
+.navbar-brand h1 {
+  font-size: 40px;
+}
+
+.bg-light {
+  background: linear-gradient(to bottom, #82ccd5, #ffffff);
+  outline: 2px solid #000000;
+  border-radius: 5px;
+}
+
+.navbar-light .navbar-nav .nav-link {
+  color: black;
+  font-size: 19px;
+}
+
+.navbar-light .navbar-nav .nav-link:hover {
+  text-decoration: underline;
+  transform: scale(1.1);
+  transition: transform 0.4s;
+}
+
+.navbar-light .navbar-nav .nav-link:focus {
+  color: black;
+}
+
+/*-------*/
+/*FOOTER*/
+/*-------*/
+.pie-pagina-2 {
+  display: flex;
+  flex-direction: column;
+  text-align: end;
+  margin-right: 50px;
+  width: 100%;
+  align-items: flex-end;
+}
+
+.pie-pagina-2 a {
+  padding: 8px;
+  margin-right: 11%;
+}
+
+.pie-pagina-2 img {
+  width: 40px;
+  height: 40px;
+}
+
+.pie-pagina-2 img:hover {
+  transform: scale(1.1);
+  transition: transform 0.4s;
+}
+
+.pie-pagina-T {
+  padding: 10px 0px 0px 0px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  margin-right: 118px;
+  font-size: 25px;
+}
+
+.byc {
+  display: inline-block;
+  text-align: center;
+  text-decoration: none;
+  color: #000;
+  padding: 10px 0;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  width: 100%;
+  font-size: 15px;
+  margin: 4px;
+}
+
+.byc:hover {
+  text-decoration: underline;
+  transform: scale(1.1);
+  transition: transform 0.4s;
+}
+
+.pie-pagina-1 {
+  display: inline-block;
+  position: absolute;
+}
+
+.pie-pagina-1 h2 {
+  padding: 10px 0px 0px 0px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  margin-left: 95px;
+  font-size: 25px;
+}
+
+.pie-pagina-nav {
+  margin-left: 48px;
+}
+
+.pie-pagina-nav li {
+  margin: 7px;
+  list-style-type: none;
+  font-family: "Montserrat", sans-serif;
+}
+
+.pie-pagina-1 li:hover {
+  transform: scale(1.1);
+  transition: transform 0.4s;
+}
+
+.pie-pagina-nav a {
+  color: black;
+  text-decoration: none;
+  font-size: 13px;
+}
+
 /* PRIMERA VISTA */
 .muestra-inicio {
   display: flex;
