--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -171,3 +171,26 @@ footer {
 #cartItems li {
   margin: 5px 0;
 }
+
+/*-------*/
+/*ICONO DE WSP ABAJO A LA DERECHA*/
+/*-------*/
+
+.whatsapp-icon{
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 1000;
+}
+
+.whatsapp-icon img{
+  width: 60px;
+  height: 60px;
+  border-radius: 35%;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.whatsapp-icon:hover img{
+  transform: scale(1.1);
+  transition: transform 0.3s;
+}
